# KiwiCoder

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
doc/: kiwi-infra.md  kiwi-language.md
example/: oww_size_selective_dna_precipitation.py
kiwi/: __init__.py
kiwi-core/include/: bioobject.h  compile.h  floatobject.h  frameobject.h  intobject.h  listobject.h  object.h  opcode.h  stringobject.h
kiwi-core/kdb/: kdb.h
kiwi/apps/: __init__.py  app.py  kiwi_sys.py  op_wrapper.py  wrapper.py
kiwi/cli/: __init__.py  command.py
kiwi/common/: __init__.py  common.py  constant.py  error.cc  exception.cc  exception.py  file.cc  message.py  procedure.cc  schema.cc
kiwi/core/: __init__.py  app.py  bio_entity.py  bio_obj.py  bio_op.py  bio_periphery.py  bio_quantity.py  graph.py  kiwi_sys.py  periphery.py  report.py  sched.py  step.py  watch.py
kiwi/endpoint/: __init__.py  kiwi_pb2.py  kiwi_pb2_grpc.py  server.py
kiwi/hardware/: __init__.py
kiwi/include/: constants.h  error.h  exception.h  (+6 more)
kiwi/krpc/: CMakeLists.txt  main.cc  stub_gen.h
kiwi/krpc/client/: base_client.h  client.cc  client.h  connector.h  protocol.h  tcp_client.cc  tcp_client.h
kiwi/krpc/server/: abstract_server.h  base_server.cc  base_server.h  client_connector_handler.h  connector.cc  connector.h  invoke_handler.h  protocol.cc  protocol.h  protocol_factory.h  rpc_protocol.cc  rpc_protocol.h  tcp_server.cc  tcp_server.h
kiwi/krpc/stub/: client_stub_gen.cc  client_stub_gen.h  server_stub_gen.h  stub_gen.h
scripts/: gen.py
tests/: test_app.py  test_eventbus.py  test_mock.py
(+32 files in other folders)
